Create an `asm` directory

--- a/src/meson.build
+++ b/src/meson.build
@@ -14,10 +14,10 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 as_sources = files(
+        'asm/section.c',
         'dll.c',
         'ht.c',
         'main.c',
-        'section.c',
 )
 
 
